[gd_scene load_steps=4 format=3 uid="uid://cgs7mpr5ywrdx"]

[ext_resource type="Script" path="res://scenes/OBI.gd" id="1_6rin5"]
[ext_resource type="Texture2D" uid="uid://bb44cd1qd4p5i" path="res://assets/sprites/bgs/w7.jpeg" id="1_fdt1p"]
[ext_resource type="AudioStream" uid="uid://c1t1pbk68w72t" path="res://assets/music/JoJo's Bizarre Adventure OST - Pillar Men Theme『Awaken』 [lRrOLTHu-ew].mp3" id="2_d718s"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6rin5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_fdt1p")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 128.0
offset_right = 640.0
offset_bottom = 448.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 72.0
offset_top = 32.0
offset_right = 448.0
offset_bottom = 256.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="Button1" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Result" type="RichTextLabel" parent="Panel"]
visible = false
layout_mode = 0
offset_top = 112.0
offset_right = 512.0
offset_bottom = 240.0
bbcode_enabled = true

[node name="Finish" type="Button" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 232.0
offset_top = 240.0
offset_right = 286.0
offset_bottom = 271.0
text = "Finish"

[node name="TryAgain" type="Button" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 208.0
offset_top = 224.0
offset_right = 287.0
offset_bottom = 255.0
text = "Try again"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_d718s")
volume_db = -4.0
autoplay = true

[connection signal="pressed" from="Panel/VBoxContainer/Button1" to="." method="_on_button_pressed" binds= ["btn1"]]
[connection signal="pressed" from="Panel/VBoxContainer/Button2" to="." method="_on_button_pressed" binds= ["btn2"]]
[connection signal="pressed" from="Panel/Finish" to="." method="_on_finish_pressed"]
[connection signal="pressed" from="Panel/TryAgain" to="." method="_on_try_again_pressed"]
